# bonsaidiary

./: .gitignore  pyproject.toml  setup.py
bonsaidiary/: __main__.py  cli.py  config.py  diary.py  new.py
bonsaidiary/util/: __init__.py  styled.py
docs/: design.puml
scripts/: bonsaidiary
tests/: test_bonsaidiary.py
